--- a/components/home/hero.module.css
+++ b/components/home/hero.module.css
@@ -1,3 +1,13 @@
 .title {
   color: red;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+}
+
+.stepsContainer {
+  display: flex;
+  align-items: center;
+}
