Everything is centered and layout is established

--- a/components/home/OuterStep.module.css
+++ b/components/home/OuterStep.module.css
@@ -20,16 +20,16 @@ top: 0;
   bottom: 0;
 }
 
-.-0 {
+._0 {
   left: 0px;
 
 }
 
-.-1 {
+._1 {
   left: 70px;
 }
 
-.-2 {
+._2 {
   left: 140px;
 
 }
