--- a/components/stage/HomeButton.module.css
+++ b/components/stage/HomeButton.module.css
@@ -1,3 +1,10 @@
 .button {
   z-index: 3;
+  background-color: green;
+  padding: 20px;
+  text-decoration: none;
+  color: white;
+  border-radius: 8px;
+  position: fixed;
+  bottom: 80px;
 }
