Styles are almost finished except for steps overlay

--- a/components/stage/StageHero.module.css
+++ b/components/stage/StageHero.module.css
@@ -1,4 +1,11 @@
 .container {
   display: flex;
   align-items: center;
+  background-color: var(--primary-color);
+  box-shadow: var(--box-shadow);
+  padding: 24px;
+}
+
+.title {
+  font-size: 32px;
 }
