--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content:center;
   position: relative;
+  background-color: var(--background-color);
+  min-height: 100vh;
 }
