--- a/components/home/OuterStep.module.css
+++ b/components/home/OuterStep.module.css
@@ -4,11 +4,14 @@
   transform: rotate(90deg);
 }
 .innerstep {
-  top: 0;
+  left: 60px;
+  bottom: -130px;
+  background-color: white;
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 300px;
   transform: rotate(-90deg);
+  font-size: 16px;
 }
 
 .up {
