--- a/components/home/StageItem.module.css
+++ b/components/home/StageItem.module.css
@@ -2,4 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--primary-color);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin: 8px;
+  padding: 24px;
+
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: black;
 }
