--- a/components/home/hero.module.css
+++ b/components/home/hero.module.css
@@ -5,9 +5,26 @@
 .container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  background-color: var(--primary-color);
+  width: 500px;
+  padding: 24px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+
+.image {
+  border-radius: 50%;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .stepsContainer {
   display: flex;
   align-items: center;
+  width: 200px;
 }
