--- a/components/stage/HighlightItem.module.css
+++ b/components/stage/HighlightItem.module.css
@@ -2,4 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--primary-color);
+  box-shadow: var(--box-shadow);
+  padding: 24px;
+  margin: 8px;
 }
