--- a/components/stage/HomeButton.module.css
+++ b/components/stage/HomeButton.module.css
@@ -1,10 +1,10 @@
 .button {
   z-index: 3;
-  background-color: green;
+  background-color: var(--background-color);
   padding: 20px;
   text-decoration: none;
-  color: white;
-  border-radius: 8px;
+  color: black;
   position: fixed;
   bottom: 80px;
+  text-decoration: underline;
 }
