--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,4 +2,12 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  text-decoration: none;
+}
+:root {
+  --primary-color: rgb(255, 255, 255);
+  --background-color: rgb(235, 235, 235);
+  --shadows-color: rgb(160, 160, 160);
+  --border-color: rgb(24, 24, 24);
+  --box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
