--- a/components/home/OuterStep.module.css
+++ b/components/home/OuterStep.module.css
@@ -1,17 +1,36 @@
 .step {
   font-size: 50px;
-  position: relative;
   transform: rotate(90deg);
+  cursor: pointer;
 }
 .innerstep {
   left: 60px;
   bottom: -130px;
   background-color: white;
-  position: absolute;
   width: 300px;
   height: 300px;
-  transform: rotate(-90deg);
   font-size: 16px;
+}
+
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.241);
+}
+
+.close {
+  font-size: 40px;
+  font-weight: 700;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 20px;
+  cursor: pointer;
 }
 
 .up {
