--- a/components/home/hero.module.css
+++ b/components/home/hero.module.css
@@ -4,12 +4,13 @@
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   background-color: var(--primary-color);
-  width: 500px;
   padding: 24px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  width: fit-content;
 }
 
 
@@ -27,4 +28,10 @@
   display: flex;
   align-items: center;
   width: 200px;
+}
+
+@media only screen and (max-width: 533px) {
+  .container {
+    justify-content: center;
+  }
 }
