--- a/components/stage/Milestones.module.css
+++ b/components/stage/Milestones.module.css
@@ -5,4 +5,10 @@
   background-color: var(--primary-color);
   box-shadow: var(--box-shadow);
   padding: 24px;
+  max-width: 500px;
+}
+
+.title {
+  font-size: 24px;
+  margin-bottom: 16px;
 }
