--- a/styles/stage.module.css
+++ b/styles/stage.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .content {
@@ -12,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: fit-content;
   background-color: var(--background-color);
-  padding: 48px;
+  padding: 20px;
 }
