--- a/styles/stage.module.css
+++ b/styles/stage.module.css
@@ -14,5 +14,5 @@
   justify-content: center;
   width: fit-content;
   background-color: var(--background-color);
-  padding: 20px;
+  padding: 40px 20px 80px 20px;
 }
